# balderhub-waveformgenerator

./: .gitignore  .pylintrc  README.md  pyproject.toml  requirements.txt  setup.cfg
docs/source/: conf.py  features.rst  index.rst  installation.rst  scenarios.rst  topic_intro.rst  utilities.rst
src/balderhub/waveformgenerator/lib/scenario_features/: __init__.py  test_config.py  waveform_generator_feature.py  waveform_generator_instrument.py  waveform_generator_instrument_channel.py
src/balderhub/waveformgenerator/lib/setup_features/: __init__.py  dirty_waveform_generator_channel.py  waveform_generator_instrument_channel1.py  waveform_generator_instrument_channel2.py
src/balderhub/waveformgenerator/lib/setup_features/siglent/: __init__.py  base_siglent_sdg_series_awg_instrument.py  siglent_sdg1000_awg_instrument.py  siglent_sdg1000x_awg_instrument.py  siglent_sdg2000x_awg_instrument.py  siglent_sdg5000_awg_instrument.py  siglent_sdg6000_x_or_xe_awg_instrument.py  siglent_sdg800_awg_instrument.py
src/balderhub/waveformgenerator/scenarios/: __init__.py  scenario_play_and_record.py
