[metadata]
name = balderhub-waveformgenerator
description = balderhub-waveformgenerator: BalderHub Project for working with waveform generator devices like programmable signal generators
author = Max Stahlschmidt
long_description = file: README.md
long_description_content_type = text/markdown
url = https://hub.balder.dev/projects/waveformgenerator
license = MIT
license_files = LICENSE
platforms = unix, linux, osx, cygwin, win32
keywords = test, systemtest, reusable, scenario, junit, balder
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Testing
    Topic :: Utilities
project_urls =
    Source=https://github.com/balder-dev/balderhub-waveformgenerator/
    Tracker=https://github.com/balder-dev/balderhub-waveformgenerator/issues

[options]
packages =
    balderhub.waveformgenerator
    balderhub.waveformgenerator.lib
    balderhub.waveformgenerator.lib.scenario_features
    balderhub.waveformgenerator.lib.setup_features
    balderhub.waveformgenerator.lib.setup_features.siglent
    balderhub.waveformgenerator.lib.utils
    balderhub.waveformgenerator.scenarios

install_requires =
    baldertest
    balderhub-scpi
    balderhub-waveform
    balderhub-waveformmonitor
    numpy
python_requires = >=3.9
package_dir =
    =src
setup_requires =
    setuptools
    setuptools-scm>=6.0
zip_safe = no
